syntax = "proto3";

option go_package = "d7024e_group04/proto";

package proto;

service Kademlia {
    rpc Ping (Node) returns (Node) {}
    rpc FindNode (FindNodeRequest) returns (Nodes) {}
    rpc FindValue (FindValueRequest) returns (NodesOrData) {}
    rpc Store (Content) returns (StoreResult) {}
}

message StoreResult {
    bool Success = 1;
}

message Content {
    bytes Key = 1;
    string Value = 2;
}

message FindValueRequest {
    bytes Hash = 1;
    bytes SenderID = 2;
}

message FindNodeRequest {
    bytes TargetID = 1;
    bytes SenderID = 2;
}

message Node {
    bytes ID = 1;
    string IPWithPort = 2;
}

message Nodes {
    repeated Node Node = 1;
}

message NodesOrData {
    oneof Value {
        Nodes Nodes = 1;
        string Data = 2;
    }
}
